--- a/css/images.css
+++ b/css/images.css
@@ -137,3 +137,8 @@ main img.hover-shadow {
 .hover-shadow:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+@media screen and (max-width: 768px) {
+  .main-thumbs {
+    justify-content: center;
+  }
+}
