--- a/css/styles.css
+++ b/css/styles.css
@@ -49,33 +49,37 @@ a {
 .bannertop {
 	box-sizing: border-box;
 	-webkit-display: flex;
-	display: flex;	
-	flex-flow: column wrap;
-	max-width: 100%;	
+	display: flex;
+	-webkit-flex-flow: column nowrap;
+	flex-flow: column nowrap;
+	align-items: flex-start;
+	width: 100%;	
 }
-.bannerlogo {
+/* .bannerlogo {
 	-webkit-display: flex;
 	display: flex;
+	-webkit-flex-flow: row wrap;
 	flex-flow: row wrap;
 	align-items: center;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin-top: 1%;
+	margin-bottom: 1%;
 	margin-left: 10%;
-}
-.logoimg {
+} */
+/* .logoimg {
 	float: left;
 	margin-right: 20px;
 }
 .logoimg img {		
     padding: 0px;
     width: 100px;
-}
+} */
 .logotext {
-	-webkit-display: flex;
-	display: flex;
-	flex-flow: column wrap;
-	align-items: center;
-	vertical-align: bottom;
+	display: block;
+	position: relative;
+	float: left;
+	margin-top: 1%;
+	margin-bottom: 1%;
+	margin-left: 14%;
 	line-height: 0;		
 	padding: 0px;
 }
@@ -101,7 +105,9 @@ a {
 }
 .bannerlinks-m {
 	width: 100%;
+	-webkit-display: flex;
 	display: flex;
+	-webkit-flex-flow: column wrap;
 	flex-flow: column wrap;
 	background-image: linear-gradient(to bottom, #3C1053, #9050b2);	
 	line-height: 1em;
@@ -116,11 +122,12 @@ a {
 	margin-left: 10%;
 	-webkit-display: flex;
 	display: flex;
+	-webkit-flex-flow: row wrap;
 	flex-flow: row wrap;
 	list-style: none;
 }
 .banner-ul li {	
-	margin: 0px 10px;
+	margin: 0px 10px 0px 0px;
 	text-align: center;	
 }
 
@@ -155,7 +162,8 @@ a {
 .row {
 	column-count: 2;
 	-webkit-display: flex;
-    display: flex;
+	display: flex;
+	-webkit-flex-flow: row nowrap;
 	flex-flow: row nowrap;
 	align-items: stretch;
 	justify-content: center;
@@ -167,10 +175,12 @@ a {
 
 /* Main column */
 .main {	
+	-webkit-flex: 90%;
     flex: 90%;
 	color: #3C1053;
     background-color: white;
-    padding: 20px;
+	padding: 20px;
+	
 }
 .main h2 {
 	text-shadow: none;
@@ -199,6 +209,9 @@ a {
 	font-size: 14px;
 	text-indent: 40px;
 	margin-right: 15%;
+}
+.main-tiles h3, .main-tiles div {
+	word-spacing: 3px;
 }
 .main-tiles span {
 	font-family: RobotoLight, Roboto, sans-serif;
@@ -255,7 +268,9 @@ a {
 	}
 
 	
-
+	.logotext  {
+		padding: 0px;
+	}
 	.row, .banner-ul, .navbar {   
         flex-flow: column wrap;
     }
